<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".FirstBook"
    android:background="@drawable/story_bg_1"
    android:orientation="vertical">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/bookabout_find_you" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_name_1"
                android:textColor="@color/white"
                android:textSize="25sp"/>
            <TextView
                android:paddingStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opisanie_1"
                android:textColor="@color/gray"
                android:textSize="20sp"/>
    <TextView
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_text_1"
        android:textColor="@color/gray"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>

