<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <LinearLayout
        android:layout_marginTop="14dp"
        android:layout_marginStart="10dp"
        android:layout_width="155dp"
        android:layout_height="26dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageButton
            android:onClick="ToLogin"
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/vzahleb_logo_mini_new" />
    </LinearLayout>
        <LinearLayout
            android:layout_marginStart="180dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/avatar_bg_sun_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.utils.widget.ImageFilterButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3"
                    android:onClick="ToProfile"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:onClick="ToFirstBook">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:background="@drawable/bookabout_find_you"
            android:onClick="ToFirstBook"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/book_name_1"
            android:textColor="@color/white"
            android:background="@color/dark_gray"
            android:padding="2dp"/>
        <TextView
            android:layout_marginTop="-5dp"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/opisanie_1"
            android:textColor="@color/gray"
            android:background="@drawable/description_bg"
            android:padding="2dp"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="ToThirdBook">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="5dp"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:background="@drawable/bookabout_hospital_of_dead_souls_2"
            android:onClick="ToThirdBook"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/book_name_2"
            android:textColor="@color/white"
            android:background="@color/dark_gray"
            android:padding="2dp"/>
        <TextView
            android:layout_marginTop="-5dp"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/opisanie_2"
            android:textColor="@color/gray"
            android:background="@drawable/description_bg"
            android:padding="2dp"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="ToFifthBook">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="5dp"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:background="@drawable/bookabout_servant_or_god"
            android:onClick="ToFifthBook"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/book_name_3"
            android:textColor="@color/white"
            android:background="@color/dark_gray"
            android:padding="2dp"/>
        <TextView
            android:layout_marginTop="-5dp"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/opisanie_3"
            android:textColor="@color/gray"
            android:background="@drawable/description_bg"
            android:padding="2dp"/>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="ToSecondBook">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:background="@drawable/bookabout_guard_4"
                android:onClick="ToSecondBook"/>

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/book_name_4"
                android:textColor="@color/white"
                android:background="@color/dark_gray"
                android:padding="2dp"/>
            <TextView
                android:layout_marginTop="-5dp"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:text="@string/opisanie_4"
                android:textColor="@color/gray"
                android:background="@drawable/description_bg"
                android:padding="2dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="ToFourthBook">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="5dp"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:background="@drawable/bookabout_guard_3"
                android:onClick="ToFourthBook"/>
            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/book_name_5"
                android:textColor="@color/white"
                android:background="@color/dark_gray"
                android:padding="2dp"/>
            <TextView
                android:layout_marginTop="-5dp"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:text="@string/opisanie_5"
                android:textColor="@color/gray"
                android:background="@drawable/description_bg"
                android:padding="2dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:onClick="ToSixthBook">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="5dp"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:background="@drawable/bookabout_infernal_special_assignment"
                android:onClick="ToSixthBook"/>
            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/book_name_6"
                android:textColor="@color/white"
                android:background="@color/dark_gray"
                android:padding="2dp"/>
            <TextView
                android:layout_marginTop="-5dp"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:text="@string/opisanie_6"
                android:textColor="@color/gray"
                android:background="@drawable/description_bg"
                android:padding="2dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>