<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FifthBook"
    android:background="@drawable/story_bg_1"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/bookabout_servant_or_god" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_name_5"
                android:textColor="@color/white"
                android:textSize="25sp"/>
            <TextView
                android:paddingStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opisanie_5"
                android:textColor="@color/gray"
                android:textSize="20sp"/>
            <TextView
                android:paddingStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_text_5"
                android:textColor="@color/gray"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>